app/kubernetes config/deployment-web-auvmp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: auvmp
  labels:
    app: web-auvmp
  name: deployment-web-auvmp
  annotations:
    version: 24.12.20
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-auvmp
  template:
    metadata:
      labels:
        app: web-auvmp
    spec:
      containers:
      - image: web-auvmp-frontend:24.12.20
        name: web-auvmp-frontend
        ports:
        - containerPort: 8080
