app/kubernetes config/service-web-auvmp.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: auvmp
  labels:
    app: web-auvmp
  name: service-web-auvmp
  annotations:
    version: 24.12.20
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  selector:
    app: web-auvmp
  ports:
  - protocol: TCP
    port: 8080
    nodePort: 32000
