app/kubernetes config/ingress-web-auvmp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: auvmp
  annotations:
    version: 24.12.20
  name: ingress-web-auvmp
spec:
  rules:
#  - host: auvmp.servehttp.com
  - http:
      paths:
      - backend:
          service:
            name: service-web-auvmp
            port:
              number: 8080
        path: /
        pathType: Prefix
#  tls:
#  - hosts:
#    - auvmp.servehttp.com
#    secretName: auvmp-servehttp-com-cert
